# NumericalAnalysis

./: New Text Document (2).txt  effi.csv
Chap2_Rootfinding/: ComputationMethod.h  InitImpact.cpp
Chap3_Interpolation/: CMakeLists.txt  interpolation.h
Chap6_SolvingLinearSystem/: chap6.md  chap6table.xlsx
Chap6_SolvingLinearSystem/chap6code/: gaussElimination.py  lal.py  lu.py  test.py
ReportChap3/: chap3.aux  chap3.out  chap3.tex
cm3/: main.cpp  poly.h  test3.h
cm_chap2/: chap2.aux  chap2.out  chap2.tex  table1.xlsx  test.cpp
cm_chap2/cm2/: CMakeLists.txt  computationResult.cpp  inFileTest  test.cpp
